--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="welcome-text">
             <p class="welcome-text__h1">Welcome to <span class="mark">TypoLib</span>, your new and modern typographic library</p>
             <p>Unleash the power of typography with our library. Elevate your designs, captivate your audience, and bring your ideas to life.</p>
-            <a class="button button-demo">Download</a>
+            <a href="https://github.com/pslib-cz/2023-l4-web-typographic-library-VeronikaLatova" class="button button-demo">Download</a>
         </div>
     </header>
     <main>
